<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ipc.gev.wallet_purse.activity.AddTradeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTrade"
        android:textSize="30sp" />
    </ScrollView>
    <RadioGroup
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/tradeChecked"
            android:checked="true"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/trade_radio"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/access_radio"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/tradeName"
        android:hint="@string/addText"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/tradeLocation"
        android:hint="@string/addTradeLocation"
        android:layout_margin="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/tradePrice"
        android:inputType="number"
        android:layout_margin="15sp"
        android:hint="@string/addPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </ScrollView>

    <EditText
        android:id="@+id/tradeDate"
        android:onClick="date"
        android:focusable="false"
        android:layout_margin="15sp"
        android:hint="@string/addDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:textSize="15sp"
        android:background="@drawable/button_shape"
        android:onClick="saveTrade"
        android:text="@string/addTradeSave"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
