<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addTrade"
            android:textSize="30sp" />
    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editSomeText"
            android:hint="@string/addText"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editLocation"
            android:hint="@string/addTradeLocation"
            android:layout_margin="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/editPrice"
            android:inputType="number"
            android:layout_margin="15sp"
            android:hint="@string/addPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <EditText
        android:id="@+id/editDate"
        android:onClick="date"
        android:focusable="false"
        android:layout_margin="15sp"
        android:hint="@string/addDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:background="@drawable/button_shape"
        android:onClick="editTrade"
        android:text="@string/addTradeSave"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
