<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ipc.gev.wallet_purse.activity.SearchActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:onClick="setDate"
        android:focusable="false"
        android:id="@+id/searchByDate"
        android:hint="@string/searchByDate"
        android:layout_margin="5dp"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="match_parent" />
        <Button
            android:background="@drawable/button_shape"
            android:onClick="get"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>
    <RadioGroup
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/tradeRadioChecked"
            android:checked="true"
            android:layout_margin="10dp"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/trade_radio"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:text="@string/access_radio"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>
    <ListView
        android:id="@+id/lv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8">

    </ListView>
    <TextView
        android:id="@+id/exit_text"
        android:visibility="invisible"
        android:textSize="20sp"
        android:text="@string/addTrade"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
