<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ipc.gev.wallet_purse.activity.MainActivity"
    android:weightSum="1">

    <TextView

        android:gravity="center"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_text"
        android:textSize="40sp"
        android:layout_marginTop="27dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <Button
        android:background="@drawable/button_shape"
        android:text="@string/find"
        android:onClick="find"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="145dp"
        android:id="@+id/button2"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:background="@drawable/button_shape"
        android:text="@string/addTr"
        android:onClick="add"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/button"
        android:layout_marginTop="59dp"

        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
